# Telecallerreport

./: .gitignore  README.md  app.py  dashboard.html  data_processor.py  google_sheets_service.py  netlify.toml  pyproject.toml  render-build.sh  requirements.txt  server.py  setup.py  setup.sh  setup_and_run.ps1  test_connection.py
netlify/functions/: api.py
