[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telecaller-dashboard"
version = "1.0.0"
description = "Telecaller Daily Report Dashboard"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "streamlit==1.31.1",
    "pandas==2.1.4",
    "plotly==5.18.0",
    "gunicorn==21.2.0",
    "numpy==1.24.3",
    "python-dotenv==1.0.0",
    "google-auth==2.23.4",
    "google-auth-oauthlib==1.1.0",
    "google-auth-httplib2==0.1.1",
    "google-api-python-client==2.108.0",
    "openpyxl==3.1.2",
    "xlrd==2.0.1"
]

[project.scripts]
streamlit-run = "streamlit:main"